# modbus

./: Red-Lion-Modbus-Map.xlsx  TiCl4_2_TiCl2_generator.json  alicat_register.json  alicat_settings.json  config.json  connection.py  devices.json  example.py  main.py  main_bk.py  port_list.py  pyproject.toml  redlion_pxu_register.json  redlion_pxu_register_control.json  redlion_settings.json  test_serial.py  tmp.csv  user_guide.md
gui/: gui.py
plugins/: modbus.py
protocol/: device.py  factory.py
queries/: redlion_pxu_register.json
