[project]
name = "modbus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alicat>=0.9.0",
    "minimalmodbus>=2.1.1",
    "serial>=0.0.97",
    "matplotlib"
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
